Reinstate backup of views HTML due to race condition somewhere
Also add in debugging info displayed if sortorder winds up not being an
array

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -205,6 +205,7 @@ $(function(){
 			} else {
 				setSortOrder();
 				var displayContent = $("#tooltipviews").html();
+				$("#tooltipviews").attr("data-backup",displayContent);
 				$("#tooltipviews").html(""); // Because I'm using id's instead of classes
 			}
 			instance.content(displayContent);
@@ -214,6 +215,7 @@ $(function(){
 			$(".sortButton,.dirButton").click(function() { changeSortOrder(this.id,$(this).attr("class")); });
 		},
 		functionAfter: function(instance,helper) {
+		  $("#tooltipviews").html($("#tooltipviews").attr("data-backup"));
 			setSortOrder();
 		}
 	});
