Don't display "ok removed" after deleting a private app.  Simply redisplay

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1083,7 +1083,7 @@ function deletePrivateApp(path,name,author) {
 		swal("Removing "+name,"","info");
 		$.post(URL,{action:'removePrivateApp',path:path},function(data) {
 			if (data) {
-				swal("","Removed","success");
+				myCloseAlert();
 				changeSortOrder(null,null,null);
 			}
 		});
