--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -128,7 +128,8 @@ var categorySub = {
 	NONE:"NONE",
 	New:"New",
 	UNCATEGORIZED:"UNCATEGORIZED",
-	All:"All"
+	All:"All",
+	PRIVATE:"PRIVATE"
 	};
 
 var categoryDesc = {
@@ -158,7 +159,8 @@ var categoryDesc = {
 	NONE:"None Selected",
 	New:"New / Updated Applications (within the last <?=$timeNew?>)",
 	UNCATEGORIZED: "All Uncategorized Applications",
-	All: "All Available Applications"
+	All: "All Available Applications",
+	PRIVATE:"All private applications"
 	};
 
 var checkStaleVar = setInterval(function(){ checkStale(); },60000);
