--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -197,8 +197,9 @@ $(function(){
 	$("#maxPerPage").val("<?=$cfg['maxPerPage']?>");
 
 	$('.ca_staticTips').tooltipster({
+	  animationDuration: [2000,350],
 		timer:15000,
-		animation:'none',
+		animation:'fade',
 		arrow:true,
 		trigger:'custom',
 		triggerOpen:{mouseenter: true},
@@ -407,10 +408,11 @@ function setToolTip() {
 	$('.ca_appPopup').attr('title','Loading...');
 	$('.ca_infoPopup').attr('title','Loading...');
 	$('.ca_tooltip').tooltipster({
+		animationDuration: [2000,350],
 		contentAsHTML:true,
 		delay:[<?=$cfg['hoverTime']?>,1],
 		timer:15000,
-		animation:'none',
+		animation:'fade',
 		arrow:true,
 		trigger:'custom',
 		triggerOpen:{mouseenter: true},
@@ -474,6 +476,13 @@ function setToolTip() {
 	});
 }
 
+function showPrivates(button) {
+  $(".allButtons").prop("disabled",false);
+	enableIcon("#categoryIcon,#subcategoryIcon",true);
+	data_selected_category = "DOESNTMATTERWHATSHERE";
+	data_section = "AppStore";
+	changeCategory(button,false);
+}
 function changeCategory(button,subSwitch) {
 	var description = button.value;
 	var category = button.id;
