--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -253,7 +253,8 @@ $(function(){
 		distance: -15,
 		maxWidth:550,
 		minWidth:550,
-		animation: 'grow',
+		animation: 'fade',
+		animationDuration: [1500,250],
 		triggerClose:{click:true,scroll:true,mouseleave:true,delay:1},
 		interactive: true,
 		viewportAware: true,
@@ -268,7 +269,8 @@ $(function(){
 		distance: -15,
 		maxWidth:550,
 		minWidth:550,
-		animation: 'grow',
+		animation: 'fade',
+		animationDuration: [1500,250],
 		triggerClose:{click:true,scroll:true,mouseleave:true,delay:1},
 		interactive: true,
 		viewportAware: true,
